--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae, fugit.</p>
-    <h1>rahul is a bad boy</h1>
+    <h1> i am learning the git and github </h1>
+    <h3>this is very easy to use</h3>
+
+    <div>
+        <p>recently i watched the mirzapur season 3</p>
+    </div>
+    
 </body>
 </html>
