--- a/new.html
+++ b/new.html
@@ -21,10 +21,25 @@
 
     </div>
 
+    <!-- first commit  -->
+
     <div>
         <h1>my favourite car is mahindra thar</h1>
         <h2>my second fav car is devender</h2>
     </div>
+
+    <!-- second commit -->
+
+    <div>
+        <h1>upcomming movie is devara</h1>
+        <h2>i will go to watch this movie</h2>
+    </div>
+
+    <div>
+        <p>ramayan is my one of the best serial i ever watched</p>
+        
+    </div>
+
 
 </body>
 </html>
